<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/darkerwaves"
    android:gravity="bottom"
    >

    <ImageView
        android:layout_width="255dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/doglogo1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="My Account"
        android:textStyle="bold"
        android:textColor="#150578"
        android:textSize="30dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username :"
            android:textColor="#150578"
            android:textSize="20dp"
            android:paddingLeft="70dp"
            android:id="@+id/usernameField"/>

        <TextView
            android:id="@+id/usernameMyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#150578"
            android:textSize="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email :"
            android:textColor="#150578"
            android:textSize="20dp"
            android:paddingLeft="70dp"
            />
        <TextView
            android:id="@+id/emailMyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="                "
            android:textColor="#150578"

            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/lowestDisplay"
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:textStyle="bold"
            android:paddingLeft="70dp"
            android:paddingBottom="5dp"
            android:text="Lowest Scoring QR Code:"
            android:textColor="#150578"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/lowestQRCode"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="70dp"
            android:textStyle="italic"
            android:text="                "
            android:textColor="#150578"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="19dp"
            android:autoSizeMinTextSize="17dp"
            android:autoSizeStepGranularity="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/highestDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="70dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:text="Highest Scoring QR Code:"
            android:textColor="#150578"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/highestQRCode"
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:paddingLeft="70dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="                "
            android:textColor="#150578"
            android:textStyle="italic"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="19dp"
            android:autoSizeMinTextSize="17dp"
            android:autoSizeStepGranularity="2dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18dp"
                android:text="Your highest scoring code is ranked "/>
            <TextView
                android:id="@+id/highCodeHash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18dp"
                />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Close"
        android:layout_gravity="center"
        android:backgroundTint="#070707"
        android:textColor="#81D4FA"
        android:layout_marginBottom="100dp"
        android:id="@+id/close_button"
        />

</LinearLayout>
