...

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <ImageButton
            android:id="@+id/leaderBoardButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/trophy"
            android:background="#81D3F9"
            />
        <ImageView
...
            />
        <ImageView
            android:layout_width="5dp"
            android:layout_height="75dp"
            />
        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/stare"
            android:background="#81D3F9"
            />
        <ImageView
...
