<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/darkwave"
    android:gravity="bottom"
    >

    <Button
        android:id="@+id/go_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Back"
        android:textSize="15dp"
        android:backgroundTint="#070707"
        android:textColor="#81D4FA"
        android:layout_marginLeft="25dp"
        >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        >

        <EditText
            android:id="@+id/cityCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter City/Country Name..."
            android:textSize="16dp"
            android:textColor="#150578"
            />

        <Button
            android:id="@+id/Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:textSize="15dp"
            android:backgroundTint="#070707"
            android:textColor="#81D4FA"
            android:layout_marginLeft="25dp"
            >
        </Button>

    </LinearLayout>

    <ListView
        android:id="@+id/codeList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"

        />

</LinearLayout>
