...
            android:layout_gravity="center"
            android:backgroundTint="#070707"
            android:textColor="#81D4FA">
    </Button>

        <Button
            android:id="@+id/codeSearchButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="Search Code"
            android:textSize="13dp"
            android:layout_gravity="center"
            android:backgroundTint="#070707"
...
