<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/darkwave"
    android:gravity="bottom"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scanned Codes "
            android:textSize="25dp"
            android:paddingRight="50dp"
            android:id="@+id/codeText"
            android:textColor="#150578"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/returnToLeaderboard"
            android:backgroundTint="#070707"
            android:textColor="#81D4FA"
            android:text="Return"
            >
        </Button>


    </LinearLayout>

    <ListView
        android:id="@+id/codesList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"

        />

</LinearLayout>
