...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/playerSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="View All Codes"
            android:layout_gravity="center"
            android:backgroundTint="#070707"
...
            android:layout_width="match_parent"
            android:layout_height="75dp"

            />

        <ImageButton
            android:id="@+id/leaderBoardButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/trophy"
            android:background="#B2E4FB"

            />
...
