<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/darkwave1"
    android:gravity="center"
    >

    <TextView
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BARQR"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#E1F5FE"
        android:alpha="0.7"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:text="Create New Account"
        android:textStyle="bold"
        android:textColor="#150578"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Username:"
            android:textColor="#150578"
            android:textSize="20sp"
            android:paddingRight="10dp"
            />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLength="15"
            android:textColor="#150578"
            android:hint="               "
            android:textSize="20sp"
            />
    </LinearLayout>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Email:"
            android:textAlignment="viewStart"
            android:textColor="#150578"
            android:textSize="20sp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="               "
            android:textColor="#150578"
            android:maxLength="15"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <RadioButton
            android:id="@+id/terms_and_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms and Services"
            android:textColor="#000"
            android:fontFamily="monospace"
            android:textSize="20sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_gravity="center"
        android:backgroundTint="#000"
        android:textColor="#9ca0b0"
        android:fontFamily="monospace"
        android:textSize="15sp"
        />

</LinearLayout>